KubernetesManifestes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-worker
  template:
    metadata:
      labels:
        app: vote-worker
    spec:
      containers:
      - name: vote-worker
        image: your-vote-worker-image:tag
