KubernetesManifestes/resultdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-db-service
spec:
  selector:
    app: voting-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
