KubernetesManifestes/votingui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-ui-service
spec:
  selector:
    app: voting-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
