KubernetesManifestes/vote-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: your-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-ingress-hostname
    http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: voting-ui-service
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-ui-service
            port:
              number: 80
